--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">AshStrolling</string>
+    <string name="nav_stroll">Caminhar</string>
+    <string name="nav_pokedex">Pokédex</string>
+    <string name="nav_about">About</string>
     <string name="path">Caminho</string>
     <string name="northAcron">N</string>
     <string name="southAcron">S</string>
