Reformulating Activity in different Fragments Adding icons

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -10,4 +10,6 @@
     <string name="eastAcron">E</string>
     <string name="westAcron">O</string>
     <string name="ash_stroll_action">Ash Stroll!</string>
+    <string name="author">Autor: </string>
+    <string name="me" translatable="false"><a href='http://www.linkedin.com/in/csotelo'>Carlos Sotelo</a></string>
 </resources>
