--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="eastAcron">E</string>
     <string name="westAcron">W</string>
     <string name="ash_stroll_action">Ash Stroll!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="author">Author: </string>
+    <string name="me" translatable="false"><a href='http://www.linkedin.com/in/csotelo'>Carlos Sotelo</a></string>
 </resources>
