--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="author">Author: </string>
     <string name="author_url" translatable="false">http://www.linkedin.com/in/csotelo</string>
     <string name="me" translatable="false"><a href='http://www.linkedin.com/in/csotelo'>Carlos Sotelo</a></string>
+    <string name="under_construction">Under Construction!</string>
+    <string name="sample_explanation">This is a sample project to solve a simple problem: </string>
+    <string name="problemDescription">O Ash está a apanhar pokémons num mundo que consiste numa grelha bidimensional infinita de casas. Em cada casa há exatamente um pokémon.\n\nO Ash começa por apanhar o pokémon que está na casa onde começa. A seguir, move-se para a casa imediatamente a norte, sul, este ou oeste de onde se encontra e apanha o pokémon que aí se encontrar, e assim sucessivamente. Atenção: se ele passar numa casa onde já passou (e, portanto, onde já apanhou um pokémon), já lá não está um pokémon para ele apanhar!\n\n O que queremos saber é: começando com um mundo cheio de pokémons (um em cada casa!), quantos pokémons o Ash apanha para uma dada sequência de movimentos?</string>
 </resources>
