--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="sample_explanation">This is a sample project that aims to solve the proposed problem: </string>
     <string name="problemDescription">O Ash está a apanhar pokémons num mundo que consiste numa grelha bidimensional infinita de casas. Em cada casa há exatamente um pokémon.\n\nO Ash começa por apanhar o pokémon que está na casa onde começa. A seguir, move-se para a casa imediatamente a norte, sul, este ou oeste de onde se encontra e apanha o pokémon que aí se encontrar, e assim sucessivamente. Atenção: se ele passar numa casa onde já passou (e, portanto, onde já apanhou um pokémon), já lá não está um pokémon para ele apanhar!\n\n O que queremos saber é: começando com um mundo cheio de pokémons (um em cada casa!), quantos pokémons o Ash apanha para uma dada sequência de movimentos?\n\n\n<B>Input and Output samples:</B>\nE -> 2\nNESO -> 4 \nNSNSNSNSNSNS -> 2</string>
     <string name="path_efficiency">Path efficiency:</string>
+    <string name="pokemon_id">#%1$s</string>
 </resources>
